@@ -1,7 +1,7 @@
 #
 # Automated Testing Framework (atf)
 #
-# Copyright (c) 2007, 2008, 2010 The NetBSD Foundation, Inc.
+# Copyright (c) 2007, 2008, 2010, 2011 The NetBSD Foundation, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -44,7 +44,7 @@ helper_subr() {
 EOF
 
     atf_check -s eq:0 -o match:'Calling helper' \
-        -o match:'This is a helper subroutine' -e empty ./work/misc_helpers \
+        -o match:'This is a helper subroutine' -e ignore ./work/misc_helpers \
         -s "$(pwd)"/work tp_srcdir
 }
 
