@@ -1,7 +1,7 @@
 #
 # Automated Testing Framework (atf)
 #
-# Copyright (c) 2007, 2008, 2010 The NetBSD Foundation, Inc.
+# Copyright (c) 2007, 2008, 2010, 2011 The NetBSD Foundation, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -27,6 +27,23 @@
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
+atf_test_case atf_run_warnings
+atf_run_warnings_head()
+{
+    # The fact that this test case is in this test program is an abuse.
+    atf_set "descr" "Tests that the test case prints a warning because" \
+                    "it is not being run by atf-run"
+}
+atf_run_warnings_body()
+{
+    unset __RUNNING_INSIDE_ATF_RUN
+    srcdir="$(atf_get_srcdir)"
+    for h in $(get_helpers); do
+        atf_check -s eq:0 -o match:"passed" -e match:"WARNING.*atf-run" \
+            "${h}" -s "${srcdir}" result_pass
+    done
+}
+
 atf_test_case result_on_stdout
 result_on_stdout_head()
 {
@@ -38,11 +55,11 @@ result_on_stdout_body()
     srcdir="$(atf_get_srcdir)"
     for h in $(get_helpers); do
         atf_check -s eq:0 -o match:"passed" -o match:"msg" \
-            -e empty "${h}" -s "${srcdir}" result_pass
+            -e ignore "${h}" -s "${srcdir}" result_pass
         atf_check -s eq:1 -o match:"failed: Failure reason" -o match:"msg" \
-            -e empty "${h}" -s "${srcdir}" result_fail
+            -e ignore "${h}" -s "${srcdir}" result_fail
         atf_check -s eq:0 -o match:"skipped: Skipped reason" -o match:"msg" \
-            -e empty "${h}" -s "${srcdir}" result_skip
+            -e ignore "${h}" -s "${srcdir}" result_skip
     done
 }
 
@@ -56,15 +73,15 @@ result_to_file_body()
 {
     srcdir="$(atf_get_srcdir)"
     for h in $(get_helpers); do
-        atf_check -s eq:0 -o inline:"msg\n" -e empty "${h}" -s "${srcdir}" \
+        atf_check -s eq:0 -o inline:"msg\n" -e ignore "${h}" -s "${srcdir}" \
             -r resfile result_pass
         atf_check -o inline:"passed\n" cat resfile
 
-        atf_check -s eq:1 -o inline:"msg\n" -e empty "${h}" -s "${srcdir}" \
+        atf_check -s eq:1 -o inline:"msg\n" -e ignore "${h}" -s "${srcdir}" \
             -r resfile result_fail
         atf_check -o inline:"failed: Failure reason\n" cat resfile
 
-        atf_check -s eq:0 -o inline:"msg\n" -e empty "${h}" -s "${srcdir}" \
+        atf_check -s eq:0 -o inline:"msg\n" -e ignore "${h}" -s "${srcdir}" \
             -r resfile result_skip
         atf_check -o inline:"skipped: Skipped reason\n" cat resfile
     done
@@ -112,6 +129,7 @@ result_exception_body()
 
 atf_init_test_cases()
 {
+    atf_add_test_case atf_run_warnings
     atf_add_test_case result_on_stdout
     atf_add_test_case result_to_file
     atf_add_test_case result_to_file_fail
